# pygeofilter-odata-cdse

./: .gitignore  404.html  README.md  codemeta.json  index.html  mkdocs.yaml  pyproject.toml
.github/workflows/: build-and-test.yaml  docs.yaml  package.yaml
attributes/: index.html
docs/: attributes.md  geographical_op.ipynb  geographical_op.md  index.ipynb  index.md  logical_comparison_op.ipynb  logical_comparison_op.md  temporal_op.ipynb  temporal_op.md
geographical_op/: index.html
logical_comparison_op/: index.html
search/: search_index.json
src/pygeocdse/: evaluator.py  odata_attributes.py  search.py  sentinel1.py  sentinel1rtc.py  sentinel2.py  sentinel3.py  sentinel5p.py
temporal_op/: index.html
tests/: test_attributes.py  test_cdse.py  test_cdse_integration.py  test_cdse_stac_search.py  test_combined_criteria.py  test_geographic_criteria.py  test_publication_date.py  test_query_attributes.py  test_sensing_date.py
